# smart-home-dashboard

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp  run.sh
include/: mainGui.h
smart-home-dashboard/: main.cpp
smart-home-dashboard/gui/: mainGui.cpp
smart-home-dashboard/include/core/: SmartHomeManager.hpp
smart-home-dashboard/include/devices/: Device.hpp  Light.hpp  MotionSensor.hpp  TemperatureSensor.hpp
smart-home-dashboard/include/gui/: MainGui.hpp
smart-home-dashboard/src/core/: SmartHomeManager.cpp
smart-home-dashboard/src/devices/: Device.cpp  Light.cpp  MotionSensor.cpp  TemperatureSensor.cpp
smart-home-dashboard/src/gui/: MainGui.cpp
smart-home-dashboard/test/core/: SmartHomeManager.test.cpp
smart-home-dashboard/test/devices/: Light.test.cpp  MotionSensor.test.cpp  TemperatureSensor.test.cpp
src/: main.cpp  mainGui.cpp
